--- a/Domaci-3.ipynb
+++ b/Domaci-3.ipynb
@@ -1,6 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "91a5e1a0",
+   "metadata": {},
+   "source": [
+    "## Domaći zadatak 3 - Veštačke neuronske mreže\n",
+    "Studenti:\n",
+    "\n",
+    "Đurađ Gvozdenović 1329\n",
+    "\n",
+    "Vesna Stojanović 1339"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86c25878",
+   "metadata": {},
+   "source": [
+    "#### Data set\n",
+    "\n",
+    "Korišćeni data set se nalazi na sledećem linku: https://www.kaggle.com/joshmcadams/oranges-vs-grapefruit?fbclid=IwAR1SdPvl0FFBy7LGacJ8zZDZMNOHJ--64e-M4A9Lfgf6J0gbCFPScYXTywc\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0afe7a3",
+   "metadata": {},
+   "source": [
+    "### Importovanje potrebnih paketa za rad sa veštačkim neuronskim mrežama"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "16d89705",
@@ -25,6 +56,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "16f4e952",
+   "metadata": {},
+   "source": [
+    "### Ucitavanje skupa podataka"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 102,
    "id": "8b014b92",
@@ -32,6 +71,14 @@
    "outputs": [],
    "source": [
     "data_df = pd.read_csv(\"/home/djura/Desktop/citrus.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c666edb",
+   "metadata": {},
+   "source": [
+    "### Deskriptivna analiza podataka"
    ]
   },
   {
@@ -202,33 +249,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "1ace06ab",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "name        0\n",
-       "diameter    0\n",
-       "weight      0\n",
-       "red         0\n",
-       "green       0\n",
-       "blue        0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_df.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 43,
    "id": "e578283c",
    "metadata": {},
@@ -352,6 +372,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "37b6d5b9",
+   "metadata": {},
+   "source": [
+    "### Provera null vrednosti"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "1ace06ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "name        0\n",
+       "diameter    0\n",
+       "weight      0\n",
+       "red         0\n",
+       "green       0\n",
+       "blue        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92db5ce7",
+   "metadata": {},
+   "source": [
+    "### Histogrami"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "id": "ae091191",
@@ -423,6 +486,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2ab44966",
+   "metadata": {},
+   "source": [
+    "### Matrica korelacije atributa"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "id": "7085a363",
@@ -459,6 +530,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e1e953d5",
+   "metadata": {},
+   "source": [
+    "### Izbacivanje atributa weight na osnovu matrice korelacije"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 103,
    "id": "d7037686",
@@ -488,6 +567,14 @@
    ],
    "source": [
     "data_df.pop(\"weight\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ede28689",
+   "metadata": {},
+   "source": [
+    "### Treniranje modela"
    ]
   },
   {
@@ -615,13 +702,21 @@
     "plt.plot(history.history['loss'], label='train')\n",
     "plt.plot(history.history['val_loss'], label='test')\n",
     "plt.legend()\n",
-    "# plot accuracy during training\n",
+    "\n",
     "plt.subplot(212)\n",
     "plt.title('Accuracy')\n",
     "plt.plot(history.history['accuracy'], label='train')\n",
     "plt.plot(history.history['val_accuracy'], label='test')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bd27017",
+   "metadata": {},
+   "source": [
+    "### Hinge"
    ]
   },
   {
@@ -725,6 +820,14 @@
     "plt.plot(history.history['val_accuracy'], label='test')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1e390ab",
+   "metadata": {},
+   "source": [
+    "### SquaredHinge"
    ]
   },
   {
@@ -832,16 +935,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2246abaf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_df = pd.read_csv(\"/home/djura/Desktop/citrus.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "id": "5acd9663",
    "metadata": {},
@@ -852,11 +945,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "abc504bc",
+   "metadata": {},
+   "source": [
+    "### Outlier detection\n",
+    "\n",
+    "U primeru ispod prikazane su dve metode sa detekciju outliera: na osnovu IQR-a i 3 standardne devijacije. IQR - inter kvartilni opseg pretstavlja razliku izmedju vrednostu prvog i treceg kvartila i koristi se kako bi se odredile donja i gorna granica za detekciju outlier-a. Standardna devijacija - prosecno odstupanje od prosecne vrednosti. Ukoliko skup podataka ima normalnu raspodelu u intervalu [mean - 3std, mean + 3std] naci ce se 99,7% vrednosti. Ovo pravilo je moguce iskoristiti za eliminaciju preostalih 0,3 procenta vrednosti koje pretstavljaju outlier-e."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "841f4658",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1258,6 +1361,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "38c604df",
+   "metadata": {},
+   "source": [
+    "### Grid search"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "id": "406c1881",
@@ -1353,6 +1464,14 @@
     "params = grid_result.cv_results_['params']\n",
     "for mean, stdev, param in zip(means, stds, params):\n",
     "    print(\"%f (%f) with: %r\" % (mean, stdev, param))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71dcf328",
+   "metadata": {},
+   "source": [
+    "### Custom loss function sa callback-om"
    ]
   },
   {
@@ -1583,7 +1702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e765dd37",
+   "id": "2a4daf7c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1591,7 +1710,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1605,7 +1724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
