--- a/Domaci-3.ipynb
+++ b/Domaci-3.ipynb
@@ -578,6 +578,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7a75e7f7",
+   "metadata": {},
+   "source": [
+    "#### Binary crossentropy loss funkcija"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "id": "5a94ec52",
@@ -716,7 +724,7 @@
    "id": "8bd27017",
    "metadata": {},
    "source": [
-    "### Hinge"
+    "### Hinge loss funkcija"
    ]
   },
   {
@@ -827,7 +835,7 @@
    "id": "b1e390ab",
    "metadata": {},
    "source": [
-    "### SquaredHinge"
+    "### SquaredHinge loss funkcija"
    ]
   },
   {
@@ -924,7 +932,7 @@
     "plt.plot(history.history['loss'], label='train')\n",
     "plt.plot(history.history['val_loss'], label='test')\n",
     "plt.legend()\n",
-    "# plot accuracy during training\n",
+    "\n",
     "plt.subplot(212)\n",
     "plt.title('Accuracy')\n",
     "plt.plot(history.history['accuracy'], label='train')\n",
@@ -1200,38 +1208,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b672c2b7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10      101.33\n",
-       "11      101.66\n",
-       "12      101.80\n",
-       "13      102.56\n",
-       "14      103.06\n",
-       "         ...  \n",
-       "9989    250.38\n",
-       "9990    250.68\n",
-       "9991    251.41\n",
-       "9992    251.82\n",
-       "9993    252.28\n",
-       "Name: weight, Length: 9847, dtype: float64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_df.pop(\"weight\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "id": "a2188885",
    "metadata": {},
@@ -1266,8 +1242,7 @@
     "\n",
     "model.summary()\n",
     "opt = SGD(learning_rate=0.01, momentum=0.9)\n",
-    "model.compile(loss='binary_crossentropy',   optimizer=\"adam\", metrics=['accuracy'])\n",
-    "# keras.utils.plot_model(model, show_shapes=True)"
+    "model.compile(loss='binary_crossentropy',   optimizer=\"adam\", metrics=['accuracy'])"
    ]
   },
   {
@@ -1323,7 +1298,7 @@
     "plt.plot(history.history['loss'], label='train')\n",
     "plt.plot(history.history['val_loss'], label='test')\n",
     "plt.legend()\n",
-    "# plot accuracy during training\n",
+    "\n",
     "plt.subplot(212)\n",
     "plt.title('Accuracy')\n",
     "plt.plot(history.history['accuracy'], label='train')\n",
@@ -1453,11 +1428,10 @@
     "neurons=list(range(2,10))\n",
     "layes = list(range(2,7))\n",
     "\n",
-    "#this does 3-fold classification. One can change k. \n",
     "param_grid = dict(n_neurons=neurons, n_layers = layes)\n",
     "grid = GridSearchCV(estimator=model, param_grid=param_grid, n_jobs=-1)\n",
     "grid_result = grid.fit(X_train, y_train)\n",
-    "# summarize results\n",
+    "\n",
     "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
     "means = grid_result.cv_results_['mean_test_score']\n",
     "stds = grid_result.cv_results_['std_test_score']\n",
@@ -1471,7 +1445,7 @@
    "id": "71dcf328",
    "metadata": {},
    "source": [
-    "### Custom loss function sa callback-om"
+    "### Custom loss funkcija "
    ]
   },
   {
@@ -1555,7 +1529,7 @@
     "plt.plot(history.history['loss'], label='train')\n",
     "plt.plot(history.history['val_loss'], label='test')\n",
     "plt.legend()\n",
-    "# plot accuracy during training\n",
+    "\n",
     "plt.subplot(212)\n",
     "plt.title('Accuracy')\n",
     "plt.plot(history.history['accuracy'], label='train')\n",
@@ -1590,6 +1564,14 @@
    ],
    "source": [
     "model.evaluate(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f804006",
+   "metadata": {},
+   "source": [
+    "### Callback"
    ]
   },
   {
@@ -1662,7 +1644,7 @@
     "plt.plot(history.history['loss'], label='train')\n",
     "plt.plot(history.history['val_loss'], label='test')\n",
     "plt.legend()\n",
-    "# plot accuracy during training\n",
+    "\n",
     "plt.subplot(212)\n",
     "plt.title('Accuracy')\n",
     "plt.plot(history.history['accuracy'], label='train')\n",
@@ -1700,9 +1682,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e2f83249",
+   "metadata": {},
+   "source": [
+    "### Zaključak"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d49af8a",
+   "metadata": {},
+   "source": [
+    "U okviru ovog domaćeg zadatka je prikazana binarna klasifikacija instanci na pomarandze i grejpfrute korišćenem veštačkih neuronskih mreža. Neuronske mreže su trenirane sa različitim loss funkcijama kao što su: Binary crossentropy, Hinge, SquaredHinge i Custom loss funkcija. Uz pomoć grid search-a je izabrana konfiguracija neuronske mreže koja daje najbolje rezultate. Iskorišćen je takođe callback mehanizam kako bi se zaustavilo treniranje mreže kada se dostigne određena preciznost. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a4daf7c",
+   "id": "de73b454",
    "metadata": {},
    "outputs": [],
    "source": []
